--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'Montserrat-bold';
-    src: url(../fonts/Montserrat-Bold.ttf);
+    src: url(../../src/fonts/Montserrat-Bold.ttf);
 }
 @font-face {
     font-family: 'Montserrat-reg';
-    src: url(../fonts/Montserrat-Regular.ttf);
+    src: url(../../src/fonts/Montserrat-Regular.ttf);
 }
 
 *{
