--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,3 +14,5 @@ $grey-text: #B3B3BA;
 $grey-separator: #E6E6F0;
 
 $gradient-red-text: linear-gradient(to right, $red-regular, #EF8080);
+$gradient-red-text-reversed: linear-gradient(to left, $red-regular, #EF8080);
+$gradient-supersoft: linear-gradient(to bottom left, $dark-blue-regular, $dark-blue-regular, #643E72);
