--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,9 @@
 @use 'normalize';
 @use 'header';
+@use 'main';
+@use 'home-slider-section';
+@use 'cooperate-companies-section';
+@use 'publications-section';
+@use 'footer';
 
 
