--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -34,6 +34,22 @@ h4{
 p{
     font-size: 1rem;
 }
+p.h1{
+    font-family: 'Montserrat-bold';
+    font-size: 2.375rem;
+}
+p.h2{
+    font-family: 'Montserrat-bold';
+    font-size: 1.875rem;
+}
+p.h3{
+    font-family: 'Montserrat-bold';
+    font-size: 1.375rem;
+}
+p.h4{
+    font-family: 'Montserrat-bold';
+    font-size: 0.875rem;
+}
 a{
     color: vars.$light-blue-regular;
     text-decoration: none;
@@ -57,6 +73,48 @@ button{
 }
 
 .container{
-    width: 92%;
+    width: 83.33%;
     margin: 0 auto;
+}
+.circle-divider{
+    width: 6px;
+    height: 6px;
+    background: vars.$grey-separator;
+    border-radius: 50%;
+    margin: 0 6px;
+}
+
+.link-with-arrow-wrapper{
+    display: inline-block;
+    margin-bottom: 10px;
+}
+.link-with-arrow{
+    display: flex;
+    align-items: center;
+    font-family: 'Montserrat-bold';
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.arrow-right-link-icon{
+    width: 12px;
+    height: 13px;
+    stroke: vars.$light-blue-regular;
+    transition: 0.3s ease-in-out;
+}
+.link-with-arrow:hover .arrow-right-link-icon{
+    stroke: vars.$red-regular;
+}
+
+@media screen and (max-width: 1440px) {
+    .container{
+        width: 88%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    p.h1{
+        font-size: 1.875rem;
+    }
 }
