--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -28,6 +28,11 @@ h1{
         width: 130px;
         max-height: 60px;
     }
+    .home-page-link{
+        display: block;
+        width: 130px;
+        max-height: 60px;
+    }
     &_route-wrapper{
         display: flex;
     }
@@ -253,8 +258,11 @@ h1{
 
     .header{
         &_logo-icon-container{
-            width: 76px;
-            max-height: 32px;
+            width: 80px;
+        }
+        .home-page-link{
+            width: 80px;
+            height: 37px;
         }
         .header-route-text{
             font-size: 1.25rem;
