added publication page and publication entry page

--- a/src/scss/_cooperate-companies-section.scss
+++ b/src/scss/_cooperate-companies-section.scss
@@ -94,7 +94,6 @@
     .grey-infratek{
         background: #EAEAEA;
         padding: 26px;
-        border-bottom-left-radius: 12px;
     }
     .blue-city-park{
         background: #282240;
@@ -119,7 +118,7 @@
         }
     }
     .companies-wrapper{
-        border-radius: none;
+        border-radius: 0;
         overflow: visible;
     }
 
