--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -223,7 +223,7 @@ h1{
     z-index: 100;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1000px) {
 
     .header{
         display: none;
@@ -271,12 +271,14 @@ h1{
 
     .header.header-tablet{
         padding-top: 0;
+        padding-bottom: 10px;
 
         .header_slash-icon-container{
             height: 26px;
         }
         .header-menu{
             width: 100%;
+            row-gap: 15px;
 
             .header-language-contacts{
                 width: 100%;
@@ -359,6 +361,25 @@ h1{
         }
         .burger-menu-button.active{
             background: vars.$dark-blue-soft;
+        }
+    }
+
+    .header.header-tablet.header-light{
+        .header-menu{
+            .header-language-contacts{
+                background: vars.$grey-bg;
+            }
+        }
+        .burger-menu-button{
+            .burger-row{
+                background: vars.$dark-blue-regular;
+            }
+        }
+        .burger-menu-button.active{
+            background: vars.$grey-separator;
+        }
+        .nav-menu{
+            box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
         }
     }
 
